JumpScript/tests/baselines/reference/letShadowedByNameInNestedScope.errors.txt
tests/cases/compiler/letShadowedByNameInNestedScope.jump(6,9): error TS2304: Cannot find name 'console'.


==== tests/cases/compiler/letShadowedByNameInNestedScope.jump (1 errors) ====
    var x;
    function foo() {
        let x = 0;
        (function () {
            var _x = 1;
            console.log(x);
            ~~~~~~~
!!! error TS2304: Cannot find name 'console'.
        })();
    }